Enhance user role management by updating role definitions to include multiple admin roles (SUPER_ADMIN, ACADEMIC_ADMIN, LIBRARY_ADMIN, STORE_ADMIN) across the application. Implement registration request functionality with GraphQL mutations for creating, approving, and rejecting requests. Refactor admin components to enforce role-based access control, ensuring only authorized users can perform specific actions. Update translations for new keys related to registration and user roles, improving localization and user experience.

--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@apollo/client": "^3.13.8",
+    "@hookform/resolvers": "^5.1.1",
     "graphql": "^16.11.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.60.0",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
